[package]
authors = ["tqlab"]
description = "Linux/Macos process monitor."
edition = "2021"
name = "proc_monitor"
version = "0.1.0"

build = "build.rs"

homepage="https://github.com/tqlab/proc-rs"
license = "GPL"

[build-dependencies]
bindgen = {version = "0.60", default-features = false, optional = true, features = ["runtime"]}
cc = "1.0"
pkg-config = "0.3"
